@@ -1,3 +1,7 @@
+2006-01-27 Buffered reading of matplotlibrc parameters in order to allow 
+	'verbose' settings to be processed first (allows verbose.report 
+	during rc validation process) - DSD
+
 2006-01-27 Removed setuptools support from setup.py and created a
 		   separate setupegg.py file to replace it. - CM
 
